# OpenASCE

./: .gitignore  .gitmodules  .readthedocs.yaml  MANIFEST.in  README.md  requirements.txt  setup.py
cpp/gbct_utils/: CMakeLists.txt
cpp/gbct_utils/include/: agg_fn.h  bin.h  causal_tree_loss.h  causal_tree_loss2.h  did_utils.h  didtree_loss.h  gbct_bin.h  gbct_loss.h  gbct_utils.h  meta.h  predict.h  utils.h
cpp/gbct_utils/include/utils/: array_args.h  chunked_array.hpp  common.h  common_legacy_solaris.h  file_io.h  json11.h  log.h  nparray_ops.h  openmp_wrapper.h  pipeline_reader.h  random.h  text_reader.h  thread_pool.hpp  threading.h
cpp/gbct_utils/src/: bin.cpp  bin_utils.hpp  causal_tree_node.cpp  data_utils.hpp  dense_bin.cpp  dense_bin.hpp  gbct_utils.cpp  json11.cpp  losses_utils.hpp  multi_val_dense_bin.cpp  multi_val_dense_bin.hpp  multi_val_sparse_bin.cpp  multi_val_sparse_bin.hpp  regression_objective.hpp  sparse_bin.cpp  sparse_bin.hpp
docker/: Dockerfile
docs/: Makefile  build.sh  conf.py  index.rst  requirements.txt
docs/core/en/: contribution.md  index.rst  install.md  overview.md
examples/attribution/: attribution.py  attribution_samples.csv  causal_graph.csv
examples/debias/cfr/: cfr_data_test.py
examples/debias/data/: data.csv
examples/debias/debias_ips/: debias_ips_regression_test.py  debias_ips_rossi_test.py
examples/debias/dice/: dice_data_test.py
examples/debias/dmbr/: dmbr_data_test.py
examples/debias/doubly_robust/: doubly_robust_regression_test.py  doubly_robust_rossi_test.py
examples/debias/fairco/: fairco_data_test.py
examples/debias/ipw/: ipw_data_test.py
examples/discovery/: README.md  regression-discovery.py  regression_samples.csv  search-discovery.py  search_samples.csv
openasce/attribution/: __init__.py  attribution_model.py  attribution_test.py
openasce/core/: runtime.py  runtime_test.py
openasce/discovery/: __init__.py  causal_graph.py  discovery.py  graph_node_form.py
openasce/extension/: debias_model.py  debias_model_test.py
openasce/inference/: __init__.py  graph_inference.py  graph_inference_test.py  inference_model.py  t_model.py
openasce/utils/: logger.py
scripts/: build.sh  run-examples.sh
tests/: run-unittest.sh
tests/datasets/: continuous_search_data.py  ihdp_data.py  mock_graph_infer_data.py  mock_search_data.py
(+68 files in other folders)
